@startuml FactoryMethod

package framework {
    abstract class Factory {
        {abstract} +create()
        {abstract} +createProduct()
        {abstract} +registerProduct()
    }
    abstract class Product {
        {abstract} +use()
    }
    Factory --> Product : Creates >
}

package idcard {
    class IDCardFactory extends Factory {
        -owners

        +createProduct()
        +registerProduct()
        +getOwners()
    }
    class IDCard extends Product {
        -owner

        +use()
        +getOwners()
    }
    IDCardFactory --> IDCard : Creates >
}
@enduml